--- a/index.html
+++ b/index.html
@@ -61,18 +61,20 @@
     </script> -->
 
     <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
-<script>
-  window.OneSignalDeferred = window.OneSignalDeferred || [];
-  OneSignalDeferred.push(async function(OneSignal) {
-    await OneSignal.init({
-      appId: "3e6933f1-caf3-493a-9c68-b62e3cce6798",
-      safari_web_id: "web.onesignal.auto.017f9378-7499-4b97-8d47-e55f2bb151c0",
-      notifyButton: {
-        enable: true,
-      },
-    });
-  });
-</script>
+    <script>
+        window.OneSignalDeferred = window.OneSignalDeferred || [];
+        OneSignalDeferred.push(async function (OneSignal) {
+            await OneSignal.init({
+                appId: "3e6933f1-caf3-493a-9c68-b62e3cce6798",
+                safari_web_id: "web.onesignal.auto.017f9378-7499-4b97-8d47-e55f2bb151c0",
+                notifyButton: {
+                    enable: true,
+                },
+                serviceWorkerPath: '/onesignal/OneSignalSDKWorker.js',
+                serviceWorkerUpdaterPath: '/onesignal/OneSignalSDKUpdaterWorker.js',
+            });
+        });
+    </script>
 
 
 
