--- a/index.html
+++ b/index.html
@@ -7,30 +7,31 @@
     <title class="notranslate">Links</title>
 
     <!-- TEMA previnir FOUC -->
-    <script src="assets/js/theme-loader.js"></script>
+    <script src="assets/js/theme-loader.js?v=1.0.0"></script>
+
+    <!-- Script para prevenir FOUC - deve ser o PRIMEIRO script -->
+    <script src="assets/js/theme_fouc.js?v=1.0.0"></script>
 
     <!-- Bootstrap CSS -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="preload" as="style" onload="this.rel='stylesheet'">
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
     <!-- Seu CSS -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css?v=1.0.0" rel="stylesheet">
 
     <!-- TEMA -->
-    <link href="assets/css/tema.css" rel="stylesheet">
+    <link href="assets/css/tema.css?v=1.0.0" rel="stylesheet">
 
 
     <!-- TRADUÇÃO -->
-    <link href="assets/css/translate.css" rel="stylesheet">
+    <link href="assets/css/translate.css?v=1.0.0" rel="stylesheet">
 
     <!--  TEMA Bootstrap DARK/LIGHT -->
-    <link href="assets/css/theme.css" rel="stylesheet">
+    <link href="assets/css/theme.css?v=1.0.0" rel="stylesheet">
 
-    <!-- Script para prevenir FOUC - deve ser o PRIMEIRO script -->
-    <script src="assets/js/theme_fouc.js"></script>
-    <!--  TEMA Bootstrap DARK/LIGHT -->
+    
 
     <!-- Fonte Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -557,21 +558,21 @@
 
 
     <!-- Tradução -->
-    <script src="assets/js/translate.js"></script>
+    <script src="assets/js/translate.js?v=1.0.0"></script>
     <script type="text/javascript"
         src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <!-- Bootstrap JS -->
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js?v=1.0.0"></script>
 
     <!-- Tema   -->
-    <script src="assets/js/tema.js"></script>
+    <script src="assets/js/tema.js?v=1.0.0"></script>
 
     <!-- Seu JS personalizado -->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js?v=1.0.0"></script>
 
     <!--  TEMA Bootstrap DARK/LIGHT -->
-    <script src="assets/js/theme.js"></script>
+    <script src="assets/js/theme.js?v=1.0.0"></script>
     <!--  TEMA Bootstrap DARK/LIGHT -->
 
 
